2011-05-20  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-74
	* obo V.Tsulaia: fixup for AthenaMP
	* M python/AthFile/impl.py

2011-05-18  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-73
	* support for Gaudi packages
	* fixed regression introduced by refactoring w/ -72
	* M bin/pkgco.py

2011-05-16  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-72
	* support for Gaudi packages
	* M bin/pkgco.py

	* tagging PyUtils-00-10-71
	* fix performance regression in diffPoolFiles stemming from a
	  perhaps too detailed branch size calculation.
	  use checkFile --detailed-branch-size to enable it.
	* M python/PoolFile.py

2011-05-04  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-70
	* bug #81808: better protection against empty PoolFileCatalog.xml files
	* M python/PoolFile.py

2011-05-02  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-69
	* use ROOTENV_NO_HOME in athfile forked subprocess
	* M python/AthFile/impl.py

2011-04-28  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-68
	* obo Peter vG: display buffer object lengths for each branch
	* M python/PoolFile.py

2011-04-26	Ilija Vukotic <ilija@vukotic.me>
	* tagging PyUtils-00-10-67
	* adding verbose to PoolFile object.
	* M python/PoolFile.py

2011-04-26  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-66
	* fix bug #81453: py-26 fix for interactive usage
	* M bin/pyroot.py

2011-04-23  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-65
	* obo Peter vG: display buffer object lengths for each branch
	* M python/PoolFile.py

2011-04-14  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-64
	* obo L.Duflot: attempt at better TFile recycling
	* warn a pattern could not be matched against any branch
	* M bin/filter-and-merge-d3pd.py

2011-03-31  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-63